force-app/main/default/objects/Study_Event__c/Study_Event__c.object-meta.xml
<CustomObject>
    <description>The events and dates that are scheduled to take place. This could be the study session event or appointment.</description>
    <label>Study Event</label>
    <nameField>
        <label>Study Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>