force-app/main/default/objects/Study_Event__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <description>The Day of week based on Start Date Non TZ.</description>
    <formula>CASE(WEEKDAY( Start_Date_Non_TZ__c ), 1, &quot;Sunday&quot; , 2, &quot;Monday&quot; , 3, &quot;Tuesday&quot; , 4, &quot;Wednesday&quot; , 5, &quot;Thursday&quot; , 6, &quot;Friday&quot; , 7, &quot;Saturday&quot;, &quot;&quot; )</formula>
    <inlineHelpText>The Day of week based on Start Date Non TZ.</inlineHelpText>
    <label>Day Of Week</label>
    <type>Text</type>
</CustomField>