force-app/main/default/objects/Study_Event__c/fields/Day_of_Week_Label__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_Label__c</fullName>
    <description>The label for day of week.</description>
    <formula>CASE( Day_of_Week__c, &apos;Sunday&apos;, $Label.reduivy__Day_of_Week_Sunday, &apos;Monday&apos;, $Label.reduivy__Day_of_Week_Monday, &apos;Tuesday&apos;, $Label.reduivy__Day_of_Week_Tuesday, &apos;Wednesday&apos;, $Label.reduivy__Day_of_Week_Wednesday, &apos;Thursday&apos;, $Label.reduivy__Day_of_Week_Thursday, &apos;Friday&apos;, $Label.reduivy__Day_of_Week_Friday, &apos;Saturday&apos;, $Label.reduivy__Day_of_Week_Saturday, &apos;&apos;)</formula>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>