force-app/main/default/objects/Study_Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>The end date time of the study event.</description>
    <inlineHelpText>The end date time of the study event.</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>