force-app/main/default/objects/Study_Event__c/fields/End_Date_Non_TZ__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Non_TZ__c</fullName>
    <description>The end date based on location timezone.</description>
    <inlineHelpText>The end date based on location timezone.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>