force-app/main/default/objects/Study_Event__c/fields/End_Time_Non_TZ__c.field-meta.xml
<CustomField>
    <fullName>End_Time_Non_TZ__c</fullName>
    <description>The end time based on location timezone.</description>
    <inlineHelpText>The end time based on location timezone.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>