force-app/main/default/objects/Study_Event__c/fields/ISO_Week__c.field-meta.xml
<CustomField>
    <fullName>ISO_Week__c</fullName>
    <description>The ISO week number based on start date non tz.</description>
    <formula>ISOWEEK( Start_Date_Non_TZ__c )</formula>
    <inlineHelpText>The ISO week number based on start date non tz.</inlineHelpText>
    <label>ISO Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>