force-app/main/default/objects/Study_Event__c/fields/ISO_Year__c.field-meta.xml
<CustomField>
    <fullName>ISO_Year__c</fullName>
    <description>The ISO year based on start date non tz.</description>
    <formula>ISOYEAR( Start_Date_Non_TZ__c )</formula>
    <inlineHelpText>The ISO year based on start date non tz.</inlineHelpText>
    <label>ISO Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>