force-app/main/default/objects/Study_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location, address or URL.</description>
    <inlineHelpText>The location, address or URL.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>