force-app/main/default/objects/Study_Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>The start date time of the study event.</description>
    <inlineHelpText>The start date time of the study event.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>