force-app/main/default/objects/Study_Event__c/fields/Start_Date_Non_TZ__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Non_TZ__c</fullName>
    <description>The start date based on location timezone.</description>
    <inlineHelpText>The start date based on location timezone.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>