force-app/main/default/objects/Study_Event__c/fields/Start_Time_Non_TZ__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Non_TZ__c</fullName>
    <description>The start time based on location timezone.</description>
    <inlineHelpText>The start time based on location timezone.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>