force-app/main/default/objects/Study_Event__c/fields/Study_Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Session_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event for study session.</description>
    <inlineHelpText>The event for study session.</inlineHelpText>
    <label>Study Session Time</label>
    <referenceTo>Study_Session_Time__c</referenceTo>
    <relationshipLabel>Study Events</relationshipLabel>
    <relationshipName>Study_Events</relationshipName>
    <type>Lookup</type>
</CustomField>