force-app/main/default/objects/Study_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Study Session</fullName>
                <default>true</default>
                <label>Study Session</label>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>