force-app/main/default/objects/Study_Event__c/listViews/This_Weeks_Events.listView-meta.xml
<ListView>
    <fullName>This_Weeks_Events</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date_Non_TZ__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s Events</label>
</ListView>